@@ -1,3 +1,8 @@
+2021-03-31  Allen D. Ball  <ball@hcf.dev>
+
+	* Refactored Thymeleaf Magic as subclass of
+	AbstractScriptEngineMagic.
+
 2021-03-30  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/jsr223/ThymeleafScriptEngine.java:
